--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
    <section id="boxes">
 		<div class="container">
 			<div class="box">
-	   <img src="/img/logo_html.png">
+	   <img src="img/logo_html.png">
 	   <h3>Html 5 Mark Up</h3>
 	   <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum atque et perspiciatis possimus impedit voluptas? Quo ipsam atque est dicta. Dolores laborum perferendis ipsum sit repudiandae totam minima dicta eum. </p>
 		   </div>
 	 <div class="box">
-		<img src="/img/logo_css.png">
+		<img src="img/logo_css.png">
 		<h3>CSS3 styling</h3>
 		<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium praesentium recusandae possimus repudiandae quia officiis dolor deleniti sequi, voluptate eveniet delectus consectetur quam sapiente quisquam impedit quibusdam est exercitationem tenetur!</p>
 	  </div>
 			   
 		<div class="box">
-		  <img src="/img/logo_brush.png">
+		  <img src="img/logo_brush.png">
 		  <h3>Grapic desing</h3>
 		  <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis laboriosam laborum voluptatibus? Quod exercitationem modi labore commodi veritatis, dignissimos tempore beatae voluptatibus nam nemo et molestiae in dolor sit dolorum.  </p>
 		</div>
